--- a/exercicios/desafio012/style.css
+++ b/exercicios/desafio012/style.css
@@ -1,5 +1,5 @@
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 :root {
@@ -7,35 +7,67 @@
     --fonte2: 'Passion One', cursive;
     --fonte3: 'Sriracha', cursive;
 }
-*{
-    margin:0px;
+
+* {
+    margin: 0px;
     padding: 0px;
     font-size: 1em;
 }
-html,body{
-    min-height: 100vh;
+
+html,
+body {
+    min-height: 100%;
     background-color: darkgray;
     font-family: var(--fonte1);
 }
-header{
+
+header {
     background-color: black;
     color: white;
     text-align: center;
 }
-header>h1{
+
+header>h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font: 10vw var(--fonte2);
 }
-header>p{
+
+header>p {
     padding-bottom: 50px;
+    font-size: 3vw;
 }
-header>p>a{
+
+a{
     text-decoration: none;
     color: white;
     font-weight: bold;
 }
+a:hover{
+    text-decoration: underline;
+}
 section{
-    margin-top: 10px;
-    margin-left: 10px;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
+    line-height: 1.5em;
+}
+section.normal {
+    background-color: white;
+    color: black;
+}
+section.imagem{
+background-color: rgb(51, 51, 51);
+color: white;
+}
+section.imagem>p{
+    width: 300px;
+    background-color: rgba(0, 0, 0, 0.295);
+}
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-size: 1.5vh;
+    padding: 10px;
 }
