--- a/exercicios/desafio012/style.css
+++ b/exercicios/desafio012/style.css
@@ -35,39 +35,64 @@ header>h1 {
 
 header>p {
     padding-bottom: 50px;
-    font-size: 3vw;
 }
 
-a{
+a {
     text-decoration: none;
     color: white;
     font-weight: bold;
 }
-a:hover{
+
+a:hover {
     text-decoration: underline;
 }
-section{
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+
+section {
+    padding-top: 10vw;
+    padding-bottom: 10vw;
     padding-left: 30px;
-    line-height: 1.5em;
+    line-height: 1.25em;
+    font-family: var(--fonte3);
+    font-size: 2.5vw;
 }
+
+section p {
+    padding-bottom: 1em;
+}
+
 section.normal {
     background-color: white;
     color: black;
 }
-section.imagem{
-background-color: rgb(51, 51, 51);
-color: white;
+
+section.imagem {
+    background-color: rgb(51, 51, 51);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.548);
+    background-attachment: fixed;
 }
-section.imagem>p{
-    width: 300px;
+
+section.imagem>p {
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.295);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.356);
 }
-footer{
+
+section#imagem1 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+
+section#imagem2 {
+    background-image: url(imagens/background002.jpg);
+    background-size: cover;
+}
+
+footer {
     background-color: black;
     color: white;
     text-align: center;
-    font-size: 1.5vh;
     padding: 10px;
 }
